@@ -1,4 +1,8 @@
 
+2016-05-31  Edward Hart <edward.dan.hart@gmail.com>
+
+	* parser.y: fixed bug #47 - tightened INSPECT syntax rules.
+
 2016-05-22  Edward Hart <edward.dan.hart@gmail.com>
 
 	* tree.c, field.c, codegen.c: replaced PICTURE strings containing packed ints with
